<?xml version="1.0"?>
<package format="2">
  <name>image_processor</name>
  <version>0.0.0</version>
  <description>ROS 2 Image Processor Action Example</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <build_type>ament_cmake</build_type>
  <depend>rclcpp</depend>
  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>action_msgs</build_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>action_msgs</test_depend>
  <export>
  </export>
</package>
